# pymilvus-duckdb

./: .gitignore  README.md  README_MultiBackend.md  pyproject.toml  test_duckdb_insert_performance.py
example/: complex_demo.py  demo.py  long_run_checker.py  test_filter_to_sql.py  verify.py
examples/: multi_backend_example.py
src/pymilvus_duckdb/: __init__.py  logger_config.py  milvus_duckdb_client.py  milvus_multi_backend_client.py
src/pymilvus_duckdb/backends/: __init__.py  base_backend.py  clickhouse_backend.py  duckdb_backend.py
