[project]
name = "pymilvus_duckdb"
version = "0.1.0"
description = "Sync Milvus data to DuckDB"
authors = [
    {name = "zhuwenxing", email = "wenxing.zhu@zilliz.com"},
]
dependencies = [
    "pymilvus>=2.5.10",
    "duckdb>=1.3.0",
    "pyarrow>=20.0.0",
    "deepdiff>=8.5.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true
