[project]
name = "pymilvus_duckdb"
version = "0.1.0"
description = "Sync Milvus data to DuckDB"
authors = [
    {name = "zhuwenxing", email = "wenxing.zhu@zilliz.com"},
]
dependencies = [
    "pymilvus>=2.5.10",
    "duckdb>=1.3.0",
    "pyarrow>=20.0.0",
    "deepdiff>=8.5.0",
    "loguru>=0.7.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

# Ruff configuration for linting and formatting
[tool.ruff]
# Maximum allowed line length
line-length = 120
# Target Python version
target-version = "py39"
# Excluded directories and files
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    ".mypy_cache",
    ".vscode"
]
# Enabled linting rules: E (pycodestyle), F (pyflakes), I (isort), B (bugbear), UP (pyupgrade)
# Enable auto-fix for lint errors
fix = true

[tool.ruff.lint]
# Enabled linting rules: E (pycodestyle), F (pyflakes), I (isort), B (bugbear), UP (pyupgrade)
select = [
    "E",
    "F",
    "I",
    "B",
    "UP"
]
